try to fix overflow-x on home

--- a/app/assets/sass/_modules/_general.scss
+++ b/app/assets/sass/_modules/_general.scss
@@ -29,7 +29,8 @@ body {
 .main {
   @include size(100%);
   max-width: 100vw;
-  overflow: visible;
+  overflow-y: visible;
+  overflow-x: hidden;
   position: relative;
   z-index:9;
 }
