--- a/app/assets/styles/main.css
+++ b/app/assets/styles/main.css
@@ -943,7 +943,8 @@ body.locked {
   height: 100%;
   width: 100%;
   max-width: 100vw;
-  overflow: visible;
+  overflow-y: visible;
+  overflow-x: hidden;
   position: relative;
   z-index: 9;
 }
